<resources>
    <string name="app_name">LINE MEMO</string>

    <!-- 메모장 메인 -->
    <string name="memo_deleted_snack">메모가 삭제되었습니다</string>
    <string name="memo_created_snack">새 메모를 저장했습니다</string>
    <string name="memo_empty_message">저장된 메모가 없어요</string>
    <string name="memo_layout_change">메모 리스트 레이아웃 스타일을 변경했습니다</string>

    <!-- 메모 편집 -->
    <string name="memo_edit_save">저장하기</string>
    <string name="memo_edit_title">제목을 입력하세요</string>
    <string name="memo_edit_content">내용을 입력하세요</string>
    <string name="memo_edit_upload_img">이미지 첨부</string>
    <string name="memo_edit_uploaded_img">첨부된 이미지</string>
    <string name="memo_edit_image_empty">첨부된 이미지가 없어요</string>
    <string name="memo_edit_load_fail_snack">이미지를 불러오는데 실패했습니다</string>
    <string name="memo_eidt_camera_select">카메라를 선택하세요</string>
    <string name="memo_eidt_gallery_select">사진첩을 선택하세요</string>

    <!--  메모 상세 보기  -->
    <string name="memo_hint_title">제목</string>
    <string name="memo_hint_content">내용</string>
    <string name="memo_delete_alert">이 메모를 삭제할까요?</string>

    <!-- 다이얼로그 -->
    <string name="add_image_title">첨부 방법을 선택하세요</string>
    <string-array name="add_image_methods_array">
        <item>사진첩</item>
        <item>LINE MEMO 카메라로 촬영</item>
        <item>다른 카메라 앱으로 촬영</item>
        <item>외부 이미지 주소(URL)</item>
    </string-array>
    <string name="uriEdit_hint">이미지 주소(URL) 입력</string>
    <string name="add_image_uri_dialog_content1">외부 이미지 첨부하기</string>
    <string name="err_dialog_title">ERROR</string>
    <string name="err_dialog_message">예상치 못한 오류가 발생했습니다.\n다시 시도해주세요.</string>

    <!-- 메뉴 -->
    <string name="menu_write">새 메모 쓰기</string>
    <string name="menu_delete">삭제하기</string>
    <string name="menu_edit">메모 수정하기</string>
    <string name="menu_view_mode">카드 모양 바꾸기</string>

    <!-- 공통 -->
    <string name="positiveBtn">확인</string>
    <string name="negativeBtn">취소</string>
    <string name="commonError">예상치 못한 오류가 발생했습니다. 다시 시도해주세요</string>
    <string name="permissionError">권한이 없습니다. 권한 설정 후 시도해주세요</string>

    <!-- 포토뷰 -->
    <string name="photo_view_notice">손가락으로 확대해보세요</string>
    <string name="photo_view_load_fail_notice">이미지를 불러오는데 실패했습니다\n외부 이미지라면 URL을 확인해주시고\n이상이 없다면 인터넷 환경을 확인해주세요</string>
</resources>