<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MemoEditActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <RelativeLayout
        android:id="@+id/titleArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <TextView
            android:id="@+id/title_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memo_hint_title"

            android:textSize="15sp" />

        <EditText
            android:id="@+id/titleEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_hint"

            android:hint="@string/memo_edit_title"
            android:inputType="text"
            android:maxLines="1"

            android:textSize="20sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/contentArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/imageArea"
        android:layout_below="@id/titleArea">

        <TextView
            android:id="@+id/content_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memo_hint_content"

            android:textSize="15sp" />

        <EditText
            android:id="@+id/contentEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/content_hint"

            android:gravity="top"
            android:hint="@string/memo_edit_content"
            android:inputType="textMultiLine"

            android:textSize="20sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/imageArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/image_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/memo_edit_upload_img" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/imageRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_hint" />
    </RelativeLayout>

</RelativeLayout>